--- a/src/index.css
+++ b/src/index.css
@@ -1,77 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Girassol&display=swap');
+
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("https://picsum.photos/1600/900");
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.8;
-  font-size: larger;
-  font-weight: 700;
-  
+  background-color: rgba(24, 162, 232, 0.62);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-    
-}
-.center{
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  margin-top: 200px;
-}
-.mainheader{
-  width: 650px;
-  height: 80px;
-}
-.header{
-  width: 650px;
-  height: 60px;
-}
-.divform{
-  width: 650px;
-  height: 300px;
-}
-.inputbox{
-  background-color: whitesmoke;
-  height: 60px;
-  border: none;
-  margin-right: 180px;
-}
-.box{
-  border: 1px solid black;
-  margin: auto;
-  width: 450px;
-  margin-top: 7px;
-  background-color: whitesmoke;
 }
 
+.App {
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  min-height: 100vh;
+  background-image: url('https://picsum.photos/1600/900');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  align-items: center;
+}
 
-.button{
-  width: 450px;
+.form {
+  flex-grow: 1;
 }
-.headercontacts{
-  width: 650px;
-  height: 60px;
-  margin-top: 50px;
+
+.contacts {
+  flex-grow: 3;
 }
-table{
-  width: 650px;
-  height:250px;
-  
+
+@media screen and (max-width: 1000px) {
+  .App {
+    flex-direction: column;
+    align-items: center;
+  }
 }
-table th{
-  color:red;
-  padding:15px
+
+.edit {
+  cursor: pointer;
+  color: green;
 }
-table td{
-  padding: 15px;
+
+.delete {
+  cursor: pointer;
+  color: red;
 }
-table tr button{
-  border: none;
+
+.header {
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-family: 'Girassol', cursive;
+}
+
+.design {
+  font-size: 2rem;
+}
+
+.contact-header {
+  font-family: Girassol;
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.nothing-found {
+  color: red;
+}
+
+.table {
+  min-width: 500px;
 }
